Fixed Mixxx logo missing from About screen

--- a/mixxx/src/dlgaboutdlg.ui
+++ b/mixxx/src/dlgaboutdlg.ui
@@ -45,7 +45,7 @@
     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt;&quot;&gt;Credits go here&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Sans Serif'; font-size:9pt;&quot;&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
@@ -66,30 +66,33 @@ p, li { white-space: pre-wrap; }
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../res/mixxx.qrc">:/images/mixxx-icon.png</pixmap>
+    <pixmap>:/images/mixxx-icon.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="mixxx_logo">
    <property name="geometry">
     <rect>
-     <x>71</x>
-     <y>14</y>
-     <width>161</width>
-     <height>61</height>
+     <x>10</x>
+     <y>0</y>
+     <width>231</width>
+     <height>91</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../res/mixxx.qrc">:/images/mixxx_logo.png</pixmap>
+    <pixmap resource="../res/mixxx.qrc">:/images/templates/logo_mixxx.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="version_label">
    <property name="geometry">
     <rect>
-     <x>21</x>
-     <y>60</y>
+     <x>40</x>
+     <y>70</y>
      <width>200</width>
      <height>20</height>
     </rect>
@@ -122,6 +125,7 @@ p, li { white-space: pre-wrap; }
   </widget>
  </widget>
  <resources>
+  <include location="../res/mixxx.qrc"/>
   <include location="../res/mixxx.qrc"/>
  </resources>
  <connections>
