--- a/mixxx/res/mixxx.qrc
+++ b/mixxx/res/mixxx.qrc
@@ -1,9 +1,10 @@
 <RCC>
   <qresource prefix="/">
-    <file>images/library/crates_art.png</file>
     <file>html/crates.html</file>
-    <file>images/templates/logo_mixxx.png</file>
     <file>html/playlists.html</file>
+    <file>images/mixxx-icon.png</file>
+    <file>images/ic_mixxx_window.png</file>
+    <file>images/templates/logo_mixxx.png</file>
     <file>images/preferences/ic_preferences_bpmdetect.png</file>
     <file>images/preferences/ic_preferences_broadcast.png</file>
     <file>images/preferences/ic_preferences_controllers.png</file>
@@ -16,7 +17,7 @@
     <file>images/preferences/ic_preferences_sampler.png</file>
     <file>images/preferences/ic_preferences_soundhardware.png</file>
     <file>images/preferences/ic_preferences_vinyl.png</file>
-    <file>images/ic_mixxx_window.png</file>
+    <file>images/library/crates_art.png</file>
     <file>images/library/ic_library_autodj.png</file>
     <file>images/library/ic_library_browse.png</file>
     <file>images/library/ic_library_crates.png</file>
