Added more tr() for further translation Fixed link in shoutcast preferences

--- a/mixxx/src/dlgprefshoutcastdlg.ui
+++ b/mixxx/src/dlgprefshoutcastdlg.ui
@@ -198,7 +198,7 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>http://mixxx.sf.net</string>
+         <string>http://www.mixxx.org</string>
         </property>
        </widget>
       </item>
