Change font to common standard for a caption in Replaygain preferences and a hint in Live broadcasting preferences

--- a/mixxx/src/dlgprefshoutcastdlg.ui
+++ b/mixxx/src/dlgprefshoutcastdlg.ui
@@ -513,6 +513,11 @@ p, li { white-space: pre-wrap; }
    </item>
    <item row="1" column="0" colspan="2">
     <widget class="QLabel" name="label_16">
+     <property name="font">
+      <font>
+       <italic>true</italic>
+      </font>
+     </property>
      <property name="text">
       <string>Please note that for technical reasons changing any shoutcast settings will cause an established connection to disconnect and reconnect. </string>
      </property>
