--- a/mixxx/src/dlgprefplaylistdlg.ui
+++ b/mixxx/src/dlgprefplaylistdlg.ui
@@ -71,7 +71,7 @@
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>Audio Playback Plugins</string>
+      <string>Audio File Formats</string>
      </property>
      <property name="flat">
       <bool>false</bool>
@@ -80,14 +80,14 @@
       <item row="1" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>Extra Playback Plugins:</string>
+         <string>Additional Format Plugins:</string>
         </property>
        </widget>
       </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>MP3, Ogg Vorbis, FLAC, Wave, Aiff Playback:</string>
+         <string>MP3, Ogg Vorbis, FLAC, WAVe, AIFF</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
@@ -246,7 +246,6 @@ playback and outbound link statistics</string>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <resources/>
  <connections/>
 </ui>
