Attempted fix for bug #690411 to make the sound preferences look nicer

--- a/mixxx/src/dlgprefsounddlg.ui
+++ b/mixxx/src/dlgprefsounddlg.ui
@@ -91,6 +91,9 @@
          <property name="frameShape">
           <enum>QFrame::NoFrame</enum>
          </property>
+         <property name="frameShadow">
+          <enum>QFrame::Plain</enum>
+         </property>
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
@@ -135,6 +138,9 @@
         <widget class="QScrollArea" name="inputScrollArea">
          <property name="frameShape">
           <enum>QFrame::NoFrame</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Plain</enum>
          </property>
          <property name="widgetResizable">
           <bool>true</bool>
