Applied a patch adding icon and updating icon templates.

--- a/mixxx/res/mixxx.qrc
+++ b/mixxx/res/mixxx.qrc
@@ -24,6 +24,7 @@
         <file>images/library/ic_library_crates.png</file>
         <file>images/library/ic_library_itunes.png</file>
         <file>images/library/ic_library_library.png</file>
+        <file>images/library/ic_library_locked.png</file>
         <file>images/library/ic_library_playlist.png</file>
         <file>images/library/ic_library_prepare.png</file>
         <file>images/library/ic_library_promotracks.png</file>
